// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserArticleTableContainer> snapshots renders correctly when canModify is false 1`] = `
<section
  className="container "
>
  <h1>
    Articles
  </h1>
  <form
    onSubmit={[Function]}
  >
    <table>
      <thead>
        <tr>
          <th>
             
            Article
          </th>
          <th>
             
            Published
          </th>
          <th>
             
            Type
          </th>
          <th>
             
            Views
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <a
              href="/issue/90/story/A%20nam"
              onClick={[Function]}
            >
              A nam
            </a>
          </td>
          <td>
            1990-05-14
          </td>
          <td>
            quia
          </td>
          <td>
            30
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/27/story/Sint%20et"
              onClick={[Function]}
            >
              Sint et
            </a>
          </td>
          <td>
            1985-07-13
          </td>
          <td>
            nobis, et
          </td>
          <td>
            17
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/56/story/Dolor%20qui"
              onClick={[Function]}
            >
              Dolor qui
            </a>
          </td>
          <td>
            1974-11-22
          </td>
          <td>
            velit, tenetur, voluptate
          </td>
          <td>
            83
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/99/story/Ut%20facilis"
              onClick={[Function]}
            >
              Ut facilis
            </a>
          </td>
          <td>
            1972-02-25
          </td>
          <td>
            facere, quia
          </td>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/21/story/Animi%20iure"
              onClick={[Function]}
            >
              Animi iure
            </a>
          </td>
          <td>
            2002-07-07
          </td>
          <td>
            sint
          </td>
          <td>
            70
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/2/story/Nihil%20nisi"
              onClick={[Function]}
            >
              Nihil nisi
            </a>
          </td>
          <td>
            2012-09-11
          </td>
          <td>
            sed, necessitatibus
          </td>
          <td>
            24
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/78/story/A%20consequatur%20doloremque"
              onClick={[Function]}
            >
              A consequatur doloremque
            </a>
          </td>
          <td>
            1989-04-13
          </td>
          <td>
            quo, consequatur
          </td>
          <td>
            6
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/14/story/Illo%20est%20sed"
              onClick={[Function]}
            >
              Illo est sed
            </a>
          </td>
          <td>
            1980-08-18
          </td>
          <td>
            dolorum, sint, rerum
          </td>
          <td>
            84
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/88/story/Repudiandae%20asperiores%20repellat"
              onClick={[Function]}
            >
              Repudiandae asperiores repellat
            </a>
          </td>
          <td>
            1994-07-27
          </td>
          <td>
            quis, itaque, harum
          </td>
          <td>
            98
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/14/story/Neque%20ad"
              onClick={[Function]}
            >
              Neque ad
            </a>
          </td>
          <td>
            1987-06-14
          </td>
          <td>
            in, consequatur
          </td>
          <td>
            13
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/25/story/Dicta%20at%20harum"
              onClick={[Function]}
            >
              Dicta at harum
            </a>
          </td>
          <td>
            1985-10-01
          </td>
          <td>
            velit, recusandae
          </td>
          <td>
            78
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/69/story/Quo%20at"
              onClick={[Function]}
            >
              Quo at
            </a>
          </td>
          <td>
            2010-04-08
          </td>
          <td>
            et, laudantium
          </td>
          <td>
            29
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/11/story/Ut%20ipsam"
              onClick={[Function]}
            >
              Ut ipsam
            </a>
          </td>
          <td>
            2011-05-03
          </td>
          <td>
            mollitia
          </td>
          <td>
            3
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/85/story/Consequuntur%20placeat"
              onClick={[Function]}
            >
              Consequuntur placeat
            </a>
          </td>
          <td>
            1990-01-27
          </td>
          <td>
            expedita, temporibus
          </td>
          <td>
            17
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/92/story/Possimus%20dolorem%20molestias"
              onClick={[Function]}
            >
              Possimus dolorem molestias
            </a>
          </td>
          <td>
            1996-04-12
          </td>
          <td>
            dignissimos, molestias
          </td>
          <td>
            19
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/18/story/Illum%20quo%20consequatur"
              onClick={[Function]}
            >
              Illum quo consequatur
            </a>
          </td>
          <td>
            1982-05-03
          </td>
          <td>
            qui, a
          </td>
          <td>
            58
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/82/story/Hic%20laborum"
              onClick={[Function]}
            >
              Hic laborum
            </a>
          </td>
          <td>
            2014-06-30
          </td>
          <td>
            non, iure
          </td>
          <td>
            72
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/8/story/Laborum%20omnis%20quam"
              onClick={[Function]}
            >
              Laborum omnis quam
            </a>
          </td>
          <td>
            2009-04-21
          </td>
          <td>
            enim, et
          </td>
          <td>
            78
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/4/story/Voluptatem%20accusantium"
              onClick={[Function]}
            >
              Voluptatem accusantium
            </a>
          </td>
          <td>
            1973-07-28
          </td>
          <td>
            saepe
          </td>
          <td>
            96
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/40/story/Exercitationem%20velit"
              onClick={[Function]}
            >
              Exercitationem velit
            </a>
          </td>
          <td>
            1974-01-09
          </td>
          <td>
            vel, quis
          </td>
          <td>
            69
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/20/story/Libero%20voluptas"
              onClick={[Function]}
            >
              Libero voluptas
            </a>
          </td>
          <td>
            1971-07-26
          </td>
          <td>
            odit, eum
          </td>
          <td>
            1
          </td>
        </tr>
      </tbody>
    </table>
    
  </form>
</section>
`;

exports[`<UserArticleTableContainer> snapshots renders correctly when canModify is true 1`] = `
<section
  className="container "
>
  <h1>
    Articles
  </h1>
  <form
    onSubmit={[Function]}
  >
    <table>
      <thead>
        <tr>
          <th>
             
            Article
          </th>
          <th>
             
            Published
          </th>
          <th>
             
            Type
          </th>
          <th>
             
            Views
          </th>
          <th>
             
            <span
              className="danger"
            >
              Delete
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <a
              href="/issue/90/story/A%20nam"
              onClick={[Function]}
            >
              A nam
            </a>
          </td>
          <td>
            1990-05-14
          </td>
          <td>
            quia
          </td>
          <td>
            30
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="corporis--20"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/27/story/Sint%20et"
              onClick={[Function]}
            >
              Sint et
            </a>
          </td>
          <td>
            1985-07-13
          </td>
          <td>
            nobis, et
          </td>
          <td>
            17
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="ipsa--19"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/56/story/Dolor%20qui"
              onClick={[Function]}
            >
              Dolor qui
            </a>
          </td>
          <td>
            1974-11-22
          </td>
          <td>
            velit, tenetur, voluptate
          </td>
          <td>
            83
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="doloribus--18"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/99/story/Ut%20facilis"
              onClick={[Function]}
            >
              Ut facilis
            </a>
          </td>
          <td>
            1972-02-25
          </td>
          <td>
            facere, quia
          </td>
          <td>
            2
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="ut--17"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/21/story/Animi%20iure"
              onClick={[Function]}
            >
              Animi iure
            </a>
          </td>
          <td>
            2002-07-07
          </td>
          <td>
            sint
          </td>
          <td>
            70
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="aliquid--16"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/2/story/Nihil%20nisi"
              onClick={[Function]}
            >
              Nihil nisi
            </a>
          </td>
          <td>
            2012-09-11
          </td>
          <td>
            sed, necessitatibus
          </td>
          <td>
            24
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="maxime--15"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/78/story/A%20consequatur%20doloremque"
              onClick={[Function]}
            >
              A consequatur doloremque
            </a>
          </td>
          <td>
            1989-04-13
          </td>
          <td>
            quo, consequatur
          </td>
          <td>
            6
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="nesciunt--14"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/14/story/Illo%20est%20sed"
              onClick={[Function]}
            >
              Illo est sed
            </a>
          </td>
          <td>
            1980-08-18
          </td>
          <td>
            dolorum, sint, rerum
          </td>
          <td>
            84
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="fuga--13"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/88/story/Repudiandae%20asperiores%20repellat"
              onClick={[Function]}
            >
              Repudiandae asperiores repellat
            </a>
          </td>
          <td>
            1994-07-27
          </td>
          <td>
            quis, itaque, harum
          </td>
          <td>
            98
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="non--12"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/14/story/Neque%20ad"
              onClick={[Function]}
            >
              Neque ad
            </a>
          </td>
          <td>
            1987-06-14
          </td>
          <td>
            in, consequatur
          </td>
          <td>
            13
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="inventore--11"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/25/story/Dicta%20at%20harum"
              onClick={[Function]}
            >
              Dicta at harum
            </a>
          </td>
          <td>
            1985-10-01
          </td>
          <td>
            velit, recusandae
          </td>
          <td>
            78
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="alias--10"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/69/story/Quo%20at"
              onClick={[Function]}
            >
              Quo at
            </a>
          </td>
          <td>
            2010-04-08
          </td>
          <td>
            et, laudantium
          </td>
          <td>
            29
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="ut--9"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/11/story/Ut%20ipsam"
              onClick={[Function]}
            >
              Ut ipsam
            </a>
          </td>
          <td>
            2011-05-03
          </td>
          <td>
            mollitia
          </td>
          <td>
            3
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="dolores--8"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/85/story/Consequuntur%20placeat"
              onClick={[Function]}
            >
              Consequuntur placeat
            </a>
          </td>
          <td>
            1990-01-27
          </td>
          <td>
            expedita, temporibus
          </td>
          <td>
            17
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="qui--7"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/92/story/Possimus%20dolorem%20molestias"
              onClick={[Function]}
            >
              Possimus dolorem molestias
            </a>
          </td>
          <td>
            1996-04-12
          </td>
          <td>
            dignissimos, molestias
          </td>
          <td>
            19
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="inventore--6"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/18/story/Illum%20quo%20consequatur"
              onClick={[Function]}
            >
              Illum quo consequatur
            </a>
          </td>
          <td>
            1982-05-03
          </td>
          <td>
            qui, a
          </td>
          <td>
            58
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="repudiandae--5"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/82/story/Hic%20laborum"
              onClick={[Function]}
            >
              Hic laborum
            </a>
          </td>
          <td>
            2014-06-30
          </td>
          <td>
            non, iure
          </td>
          <td>
            72
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="minima--4"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/8/story/Laborum%20omnis%20quam"
              onClick={[Function]}
            >
              Laborum omnis quam
            </a>
          </td>
          <td>
            2009-04-21
          </td>
          <td>
            enim, et
          </td>
          <td>
            78
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="molestiae--3"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/4/story/Voluptatem%20accusantium"
              onClick={[Function]}
            >
              Voluptatem accusantium
            </a>
          </td>
          <td>
            1973-07-28
          </td>
          <td>
            saepe
          </td>
          <td>
            96
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="labore--2"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/40/story/Exercitationem%20velit"
              onClick={[Function]}
            >
              Exercitationem velit
            </a>
          </td>
          <td>
            1974-01-09
          </td>
          <td>
            vel, quis
          </td>
          <td>
            69
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="non--1"
            />
          </td>
        </tr>
        <tr>
          <td>
            <a
              href="/issue/20/story/Libero%20voluptas"
              onClick={[Function]}
            >
              Libero voluptas
            </a>
          </td>
          <td>
            1971-07-26
          </td>
          <td>
            odit, eum
          </td>
          <td>
            1
          </td>
          <td>
            <input
              name="delArt"
              onChange={[Function]}
              type="checkbox"
              value="eos--0"
            />
          </td>
        </tr>
      </tbody>
    </table>
    <div>
      <label>
        Password: 
        <input
          name="password"
          required={true}
          type="password"
        />
        <span
          className="danger"
        >
          *
        </span>
        
      </label>
      <input
        type="submit"
      />
    </div>
  </form>
</section>
`;
